# Polybius

./: .clangd  .gitignore  CMakeLists.txt  PolybiusSoftwarePlan.xopp  README.md  vcpkg.json
.ccls-cache/@@home@maximilian@Workspace@Polybius/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  (+178 more)
.ccls-cache/@home@maximilian@Workspace@Polybius/: Debug@_deps@raylib_cpp-src@include@AudioDevice.hpp.blob  Debug@_deps@raylib_cpp-src@include@AudioStream.hpp.blob  Debug@_deps@raylib_cpp-src@include@BoundingBox.hpp.blob  Debug@_deps@raylib_cpp-src@include@Camera2D.hpp.blob  src@main.cpp  src@main.cpp.blob  (+34 more)
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Polybius/: CMakeLists.txt  main.cpp
assets/: CMakeLists.txt
cmake/: cflags.cmake  cppcheck.cmake  dependencies.cmake  deps.cmake  raspberry-CC-TC.cmake
src/: main.cpp
(+7 files in other folders)
